// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarClassification render() should render classification with an edit button when can_upload is true 1`] = `
<Collapsible
  animationDuration={100}
  buttonProps={
    Object {
      "data-resin-target": "classification",
    }
  }
  className="bcs-SidebarClassification"
  headerActionItems={
    <EditClassificationButton
      className="bcs-SidebarClassification-edit"
      isEditing={true}
      onEdit={[MockFunction]}
    />
  }
  isOpen={true}
  title={
    <FormattedMessage
      defaultMessage="Classification"
      id="boxui.classification.classification"
    />
  }
>
  <Classification
    definition="message"
    messageStyle="inline"
    name="Public"
  />
</Collapsible>
`;

exports[`elements/content-sidebar/SidebarClassification render() should render classification with no edit button when can_upload is false 1`] = `
<Collapsible
  animationDuration={100}
  buttonProps={
    Object {
      "data-resin-target": "classification",
    }
  }
  className="bcs-SidebarClassification"
  headerActionItems={null}
  isOpen={true}
  title={
    <FormattedMessage
      defaultMessage="Classification"
      id="boxui.classification.classification"
    />
  }
>
  <Classification
    definition="message"
    messageStyle="inline"
    name="Public"
  />
</Collapsible>
`;

exports[`elements/content-sidebar/SidebarClassification render() should render classification with no edit button when onEdit is null 1`] = `
<Collapsible
  animationDuration={100}
  buttonProps={
    Object {
      "data-resin-target": "classification",
    }
  }
  className="bcs-SidebarClassification"
  headerActionItems={null}
  isOpen={true}
  title={
    <FormattedMessage
      defaultMessage="Classification"
      id="boxui.classification.classification"
    />
  }
>
  <Classification
    definition="message"
    messageStyle="inline"
    name="Public"
  />
</Collapsible>
`;

exports[`elements/content-sidebar/SidebarClassification render() should render nothing when not classified and can_upload is false 1`] = `""`;
